created API functionalities: AddMultipleBooks.feature - GET, POST, DELETE book