@@ -29,21 +29,6 @@ public class BooksActions extends CommonActions {
         LogManager.getLogger().info("Response Body: \n{}", formatJson(response.getBody().asString()));
     }
 
-    public List<String> getRandomBook(int count) {
-        Response response = ScenarioContext.getInstance().getData(ObjectKey.RESPONSE);
-        JsonPath jsonPath = response.jsonPath();
-
-        List<String> isbnList = jsonPath.getList("books.isbn");
-        count = Math.min(count, isbnList.size());
-        Collections.shuffle(isbnList, new Random());
-        List<String> randomIsbn = isbnList.stream()
-                .limit(count)
-                .collect(Collectors.toList());
-
-        LogManager.getLogger().info("The book with the following isbn is generated: " + randomIsbn);
-        return randomIsbn;
-    }
-
     public void addBook (int randomIsbnCount) {
         String token = ScenarioContext.getInstance().getData(ObjectKey.TOKEN);
         String userId = ScenarioContext.getInstance().getData(ObjectKey.USER_ID);
@@ -53,8 +38,7 @@ public class BooksActions extends CommonActions {
 
         List<Map<String, String>> isbnList = bookIsbn.stream()
                 .map(isbn -> Map.of("isbn", isbn))
-                .collect(Collectors.toList());
-
+                .toList();
 
         Response response = given()
                 .header("Authorization", "Bearer " + token)
@@ -73,6 +57,29 @@ public class BooksActions extends CommonActions {
             String errorMessage = response.jsonPath().getString("message");
             LogManager.getLogger().info("Failed to add books to user ID: {}. Status Code: {}, Error: {}", userId, response.statusCode(), errorMessage);
         }
+    }
+
+    public void addMultipleBooksToProfile (int randomIsbnCount) {
+        String token = ScenarioContext.getInstance().getData(ObjectKey.TOKEN);
+        String userId = ScenarioContext.getInstance().getData(ObjectKey.USER_ID);
+
+        bookIsbn = getRandomBook(randomIsbnCount);
+        ScenarioContext.getInstance().saveData(ObjectKey.BOOKS_ISBN, bookIsbn);
+
+        List<Map<String, String>> isbnList = bookIsbn.stream()
+                .map(isbn -> Map.of("isbn", isbn))
+                .toList();
+
+        Response response = given()
+                .header("Authorization", "Bearer " + token)
+                .contentType("application/json")
+                .body(Map.of(
+                        "userId", userId,
+                        "collectionOfIsbns", isbnList
+                ))
+                .post(PropertiesManager.getProperty("BASE_URL_API") + GET_BOOKS.getEndPoint())
+                .thenReturn();
+        ScenarioContext.getInstance().saveData(RESPONSE, response);
     }
 
 
